# ProfeTrack

./: .gitignore  makefile  pyproject.toml  settings.toml
ProfeTrack/: app.py
ProfeTrack/blueprints/: __init__.py  login.py  user.py
ProfeTrack/models/: base.py  enum.py  user.py
ProfeTrack/service/: auth.py  comands.py  database.py  session.py  settings.py
ProfeTrack/templates/: base.html  create_user.html  home.html  login.html
