[tool.poetry]
name = "profetrack"
version = "0.1.0"
description = ""
authors = ["ecaf1 <edeilsonazevedo22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
passlib = "^1.7.4"
flask-login = "^0.6.3"
flask-session = "^0.6.0"
flask-migrate = "^4.0.7"
dynaconf = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
